src/test/deca/context/invalid/created/object/equals_boolean_A.deca
// Description :
//    test equals entre un boolean et un A
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 11: 
class A{}
{
boolean a;
A b;
int c = a.equal(b);
}
